--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
+    "dotenv": "^17.2.3",
     "framer-motion": "^12.23.12",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
