--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 ABC_USERNAME='elsaliu20242024@163.com'
 ABC_PASSWORD='Novel2024'
 ABC_BASE_URL='https://www.abc.net.au/'
+BASIC_AUTH_USERNAME='admin'
+BASIC_AUTH_PASSWORD='admin'
