--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix: 
-        env: [staging, production]
+        env: ['staging']
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-node@v4
